builder/scss/main/production/_builder.scss
/* ... */
.extras-wrap {
    .body {
        overflow-y: scroll;
        padding: 15px;
        @include display-flex;
        @include flex-flow(row wrap);
        @include align-content(flex-start);

        > div {
            @include bp(max-width, $bp-small) {
                padding: 20px;
            }

            @include bp(min-width, $bp-small + 1) {
                padding: 25px;
            }
        }

        .techflex-wrap {
            @include bp(max-width, $bp-small) {
                padding: 10px 10px 20px;
            }
        }
    }

    h3 {
        font-size: 18px;
        font-weight: 800;
        letter-spacing: 2px;
        margin-bottom: 1em;
        position: relative;
        text-align: center;
        text-transform: uppercase;
        width: 100%;

        span {
            color: #aaa;
            font-size: 12px;
            font-weight: 300;
            letter-spacing: 1px;
            text-transform: lowercase;
        }

        p {
            font-size: 10px;
            font-weight: 300;
            letter-spacing: 1px;
            margin: 1em auto 0;
            text-transform: none;
        }
    }
}

.techflex-wrap {
    position: relative;
    width: 100%;
    @include flexbox((
        display: flex,
        flex-flow: row wrap,
        justify-content: center,
        align-content: flex-start,
    ));

    &:before {
        background-color: #999;
        bottom: 0;
        content: "";
        height: 1px;
        left: 5%;
        position: absolute;
        width: 90%;
    }

    &[data-enabled="true"] {
        &:after {
            display: none;
        }
    }

    &[data-enabled="false"] {
        &:after {
            position: absolute;
            content: "Sorry, this configuration is not compatible with techflex.";
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background-color: rgba($white, 0.9);
            border: solid 2px $black;
            @include flexcenter;
        }
    }

    .techflex {
        margin: 0 5px 5px;
        width: 75px;

        &.blank {
            margin-bottom: 0;
        }

        input {
            display: none;

            &:checked ~ label:before {
                background-color: $white;
                color: $black;
                content: "Selected";
            }
        }

        span {
            text-transform: uppercase;
            font-size: 14px;
            width: 100%;
            display: block;
            text-align: center;
            letter-spacing: 1px;
        }

        label {
            border: 1px solid $black;
            cursor: pointer;
            display: block;
            height: 100px;
            position: relative;
            width: 100%;

            &:before {
                font-size: 12px;
                content: "Select";
                color: $white;
                background-color: $black;
                position: absolute;
                bottom: 0;
                left: 0;
                width: 100%;
                height: 25px;
                text-align: center;
                padding-top: 7.5px;
                letter-spacing: 1px;
                text-transform: uppercase;
            }

            img {
                width: 100%;
            }

            &[for="techflex_white"] {
                img {
                    background-color: $black;
                }
            }
        }
    }
}

.tourproof-wrap,
.reverse-wrap {
    width: 50%;

    input {
        display: none;

        &:checked ~ label {
            background-position: center bottom;
        }
    }

    span {
        margin-top: 5px;
        color: #aaa;
        font-size: 11px;
        font-weight: 300;
        letter-spacing: 1px;
        text-transform: lowercase;
    }

    label {
        background-image: image-url('builder/check.png');
        background-position: center top;
        background-repeat: no-repeat;
        background-size: 100% auto;
        cursor: pointer;
        display: block;
        height: 20px;
        margin: 0 auto;
        width: 20px;
    }
}

.tourproof-wrap {
    position: relative;
    width: 100%;

    .body-wrap[data-cable-type="patch"] & {
        width: 50%;

        &:after {
            display: block;
        }
    }

    &:after {
        background-color: #999;
        content: "";
        display: none;
        height: 80%;
        position: absolute;
        right: 0;
        top: 10%;
        width: 1px;
    }


    .tourproof-container {
        max-width: 165px;
        margin: 0 auto;

        @include bp(max-width, $bp-small) {
            text-align: center;

            span {
                margin-top: 0;
            }

            label {
                margin-top: 5px;
            }
        }

        @include bp(min-width, $bp-small + 1) {
            padding-right: 75px;

            label {
                float: right;
            }
        }
    }

    button {
        background-color: #ccc;
        border: 1px solid #bbb;
        border-radius: 50%;
        font-size: 10px;
        font-weight: 300;
        height: 15px;
        padding-left: 2px;
        width: 15px;

        @include bp(max-width, $bp-small) {
            position: absolute;
            right: 0;
            top: 10px;
        }

        @include bp(min-width, $bp-small + 1) {
            margin-left: 5px;
            vertical-align: middle;
        }
    }
}

.reverse-wrap {
    position: relative;
    display: none;

    .body-wrap[data-cable-type="patch"] & {
        display: block;
    }
}

